# tama-desktop

./: .gitignore  LICENSE  LOG.md  PLAN.md  PLAN2.md  README.md  RELEASE_CHECKLIST.md  context.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
server/: sbv2_api.py
src/: App.tsx  i18n.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tts_manager.rs  voice_session.rs  whisper.rs
src/components/: ApiKeyDialog.tsx  AppErrorBoundary.tsx  AppSidebar.tsx  AppStatusDot.tsx  CustomScenarioForm.tsx  HomeScreen.tsx  SBV2Control.tsx  ScenarioPicker.tsx  SenseiSidebar.tsx  SessionHistory.tsx  Settings.tsx  StatsScreen.tsx  VoicevoxControl.tsx
src/components/conversation/: ConversationScreen.tsx  MessageBubble.tsx  ShadowModeScreen.tsx  TranscriptBubbles.tsx  VoiceModeScreen.tsx  VoiceVisualizer.tsx
src/components/ui/: alert.tsx  (+7 more)
src/data/: scenarios.ts
src/hooks/: useAudioRecorder.ts  useSpeechRecognition.ts  useVADRecorder.ts
src/lib/: simple-markdown.tsx
src/services/: account.ts  activity-calendar.ts  app-config.ts  app-events.ts  audio-utils.ts  claude.ts  display.ts  feedback-parser.ts  locale-format.ts  openai.ts  quiz-readings.ts  scenarios.ts  sensei-context.ts  sensei.ts  shadow.ts  srs.ts  storage.ts  study-plan.ts  tools.ts  transcription.ts  tts-sbv2.ts  tts-voicevox.ts  tts.ts  updater.ts  voicevox.ts  whisper-local.ts
src/styles/: fonts.css
src/types/: index.ts
(+8 files in other folders)
