[package]
name = "tama-desktop"
version = "1.1.0"
description = "Tama - Japanese Practice Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["fs", "sync", "rt"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
base64 = "0.22"
cpal = "0.15"
rubato = "0.16"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.15" }
